welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: 'case' expected but string literal found.
		"R" => 
                ^BDR2:4: error: '}' expected but ';' found.
			droite();
                                ^BDR2:6: error: not a legal formal parameter
		"L" =>
                ^BDR2:9: error: not a legal formal parameter
		"I" =>
                ^BDR2:12: error: not a legal formal parameter
		"A" => 
                ^BDR2:14: error: not a legal formal parameter
		"B" =>
                ^BDR2:16: error: not a legal formal parameter
		"C" =>
                ^BDR2:18: error: not a legal formal parameter
		"D" =>
                ^BDR2:20: error: not a legal formal parameter
		"E" =>
                ^BDR2:22: error: not a legal formal parameter
		"F" => 
                ^BDR2:24: error: not a legal formal parameter
		"Z" =>
                ^BDR2:26: error: not a legal formal parameter
		"Y" =>
                ^BDR2:28: error: not a legal formal parameter
		"X" =>
                ^BDR2:30: error: not a legal formal parameter
		"W" =>
                ^BDR2:32: error: not a legal formal parameter
		"V"=>
                ^BDR2:34: error: not a legal formal parameter
		"U" =>
                ^BDR2:41: error: eof expected but '}' found.
}
^