welcome.lessons.welcome.bdr.BDR2.scala.code
while(estSurMessage()) {
	lireMessage() match {
		"R" => 
			droite();
			avance();
		"L" =>
			gauche();
			avance();
		"I" =>
			retourne();
			avance();
		"A" => 
			avance();
		"B" =>
			avance(2);
		"C" =>
			avance(3);
		"D" =>
			avance(4);
		"E" =>
			avance(5);
		"F" => 
			avance(6);
		"Z" =>
			recule();
		"Y" =>
			recule(2);
		"X" =>
			recule(3);
		"W" =>
			recule(4);
		"V"=>
			recule(5);
		"U" =>
			recule(6);
	}
}
